--- a/MainPage.html
+++ b/MainPage.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="static/CardStyle.css">
+    </head>
+    <body style="background-color: wheat;">
+        <div id="Hand">
+            <p class="Card">1</p>
+            <p class="Card">1</p>
+            <p class="Card">1</p>
+            <p class="Card">1</p>
+            <p class="Card">1</p>
+            <p class="Card">1</p>
+            <p class="Card">1</p>
+            <p class="Card">1</p>
 
+        </div>
+    </body>
+</html>
