Made card design, hover, and hand position

--- a/MainPage.html
+++ b/MainPage.html
@@ -5,15 +5,8 @@
     </head>
     <body style="background-color: wheat;">
         <div id="Hand">
-            <p class="Card">1</p>
-            <p class="Card">1</p>
-            <p class="Card">1</p>
-            <p class="Card">1</p>
-            <p class="Card">1</p>
-            <p class="Card">1</p>
-            <p class="Card">1</p>
-            <p class="Card">1</p>
-
         </div>
+
+        <script src="static/CardPosition.js"></script>
     </body>
 </html>
