Finished card select, un-select, and playing transitions

--- a/MainPage.html
+++ b/MainPage.html
@@ -4,9 +4,13 @@
         <link rel="stylesheet" type="text/css" href="static/CardStyle.css">
     </head>
     <body style="background-color: wheat;">
+        <div id="Pile">
+            <p>Deck goes here</p>
+        </div>
         <div id="Hand">
         </div>
+        <button onclick="PlayCards()" style="transform: translate(1100px,825px); cursor:pointer;">Play Cards</button>
 
-        <script src="static/CardPosition.js"></script>
+        <script src="static/CardCode.js"></script>
     </body>
 </html>
