Added difference between level titles customm tiles

--- a/MenuScreen.html
+++ b/MenuScreen.html
@@ -4,8 +4,7 @@
         <link rel="stylesheet" type="text/css" href="/GeneralStyles.css">
     </head>
     <body>
-        <form action="/startGame" method="post">
-            <p>Not finished sending data code yet</p>
+        <form action="/startCustomGame" method="post">
             <label for="cardAmount">Choose the amount of cards you want</label>
             <input type="range" min="1" max="100" value="1" name="cardAmount" oninput="this.nextElementSibling.value = this.value">
             <output>1</output>
