--- a/MenuScreen.html
+++ b/MenuScreen.html
@@ -29,6 +29,7 @@
             <label for="cardAmount">Click here to play a full run</label>
             <button type="submit" name="cardAmount" value="1">Start Run</button>
         </form>
-       <script src="/SetupGame.js"></script>
+        <p id="WinStatus">Win text goes here</p>
+       <script src="/SetupWinText.js"></script>
     </body>
 </html>
