--- a/MenuScreen.html
+++ b/MenuScreen.html
@@ -33,7 +33,8 @@
         <form id="ServerForm">
             <label>Enter a server Name here</label>
             <input type="text" placeholder="Enter server name here" id="ServerInput">
-            <input type="submit" value="Connect to server">
+            <input type="submit" value="Make new server" name="MakeServer">
+            <input type="submit" value="Join a server" name="JoinServer">
         </form>
         <div id="MessageBox">
         </div>
@@ -47,7 +48,7 @@
         <script>
             console.log(window.location.hostname);
             console.log(window.location.host);
-            const socket = io();
+            let socket = io();
             console.log(socket.io.uri);
             var userName = "";
             const sendForm = document.getElementById("MessageForm");
@@ -56,17 +57,19 @@
             const serverText = document.getElementById("ServerInput");
             inputArea.placeholder  = "Enter your username here";
             severForm.addEventListener("submit", (event) =>{
+                console.log(event.submitter);
                 event.preventDefault();
-                socket.emit("MakeServer", serverText.value, socket.io.uri, "Ssplat");
+                if(event.submitter.name == "MakeServer")
+                {
+                    socket.emit("MakeServer", serverText.value, socket.io.uri, "Ssplat");
+                }else
+                {
+                    socket.emit("ChangeServer", serverText.value);
+                }
                 serverText.value = "";
 
-            });
 
-            socket.on("ConnectToNewServer", (uri) =>{
-                const newUrl = `https//:${uri}`;
-                socket = io(newUrl);
-                window.location.href = newUrl;
-            })
+            });
 
             sendForm.addEventListener("submit", (event) => {
                 event.preventDefault();
@@ -111,7 +114,16 @@
                     inputArea.placeholder  = `${userNameHolder} is taken, please input a different name`;
 
                 });
-
+                
+                socket.on("ConnectToNewServer", (uri) =>{
+                    console.log(uri);
+                    const newUrl = uri;
+                    document.getElementById("MessageBox").replaceChildren();
+                    socket.disconnect();
+                    socket = io(newUrl);
+                    console.log(newUrl);
+                    window.location.href = newUrl;
+                });
          
         </script>
     </body>
