Need to make server cards left data align with client side

--- a/MainPage.html
+++ b/MainPage.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="/GeneralStyles.css">
     </head>
     <body style="background-color: wheat;">
+        <p id="OtherPlayersText">Player Info Here</p>
         <button onclick="StartGame()" style="transform: translate(1100px,525px)" id="StartButton">Click when ready</button>
         <p id="WinText"></p>
         <button onclick="NextLevel()" style="transform: translate(1100px,525px)" id="NextLevelButton" hidden='true'>Click when ready</button>
