Added cards left info to sockets

--- a/MenuScreen.html
+++ b/MenuScreen.html
@@ -149,6 +149,10 @@
             
             inputArea.placeholder  = "Enter your messages here";
             
+            function UpdateCardsLeft()
+            {
+                socket.emit("SetCardsLeft", (GetCardsLeft()));
+            }
             //Sends email to desired people
             function AddEmail()
             {
