Allowed players to see how cards everyone has left.

--- a/MenuScreen.html
+++ b/MenuScreen.html
@@ -133,6 +133,9 @@
                 NextLevel();
             });
             
+            socket.on("UpdatePlayerInfoText", (req, res) => {
+                ShowOtherPlayerInfo();
+            });
             async function TestReplace()
             {
                 const fileURL = "/MainPageHTMLText.txt";
