--- a/MenuScreen.html
+++ b/MenuScreen.html
@@ -8,32 +8,32 @@
     </head>
     <body id="MainBody">
         <div id="MainBodyContents">
-        <form id="CustomGameForm" method="POST" action="/startCustomGame" hidden="true">
-            <label for="cardAmount">Choose the amount of cards you want</label>
-            <input type="range" min="1" max="100" value="1" name="cardAmount" oninput="this.nextElementSibling.value = this.value">
+        <div id="CustomGameForm" method="POST" action="/startCustomGame" hidden="true">
+            <p>Choose the amount of cards you want</p>
+            <input id="CustomCardRange" type="range" min="1" max="100" value="1" name="cardAmount" oninput="this.nextElementSibling.value = this.value">
             <output>1</output>
-            <input type="submit" value="Create Game">
-        </form>
+            <button onclick="StartCustomGame()">Create Game</button>
+        </div>
         <!--Change how games start to adjust for readying up-->
-        <form id="LevelsForm" method="POST" action="/startGameFromLevel">
+        <div id="LevelsForm">
             <div id="LevelButtons" hidden="true">
-                <label for="cardAmount">What level do you want to play?</label>
-                <button  type="submit" name="cardAmount" value="10">Level 10</button>
-                <button  type="submit" name="cardAmount" value="9">Level 9</button>
-                <button  type="submit" name="cardAmount" value="8">Level 8</button>
-                <button  type="submit" name="cardAmount" value="7">Level 7</button>
-                <button  type="submit" name="cardAmount" value="6">Level 6</button>
-                <button  type="submit" name="cardAmount" value="5">Level 5</button>
-                <button  type="submit" name="cardAmount" value="4">Level 4</button>
-                <button  type="submit" name="cardAmount" value="3">Level 3</button>
-                <button  type="submit" name="cardAmount" value="2">Level 2</button>
-                <button  type="submit" name="cardAmount" value="1">Level 1</button>
+                <p>What level do you want to play?</p>
+                <button  onclick="StartGameFromLevel(10)" value="10">Level 10</button>
+                <button  onclick="StartGameFromLevel(9)" value="9">Level 9</button>
+                <button  onclick="StartGameFromLevel(8)" value="8">Level 8</button>
+                <button  onclick="StartGameFromLevel(7)" value="7">Level 7</button>
+                <button  onclick="StartGameFromLevel(6)" value="6">Level 6</button>
+                <button  onclick="StartGameFromLevel(5)" value="5">Level 5</button>
+                <button  onclick="StartGameFromLevel(4)" value="4">Level 4</button>
+                <button  onclick="StartGameFromLevel(3)" value="3">Level 3</button>
+                <button  onclick="StartGameFromLevel(2)" value="2">Level 2</button>
+                <button  onclick="StartGameFromLevel(1)" value="1">Level 1</button>
             </div>
-        </form> 
-        <form id="FullGameForm" method="POST" action="/startFullGame"  hidden="true">
-            <label for="cardAmount">Click here to play a full run</label>
-            <button type="submit" name="cardAmount" value="1">Start Run</button>
-        </form>
+        </div> 
+        <div id="FullGameForm" hidden="true">
+            <p>Click here to play a full run</p>
+            <button onclick="StartFullGame()" value="1">Start Run</button>
+        </div>
         <button id="PlayButton" hidden="true">Play Game</button>
         <p id="WinStatus">Win text goes here</p>
 
@@ -56,7 +56,7 @@
             <input type="text" id="UserNameInput" placeholder="Enter the username you want to use here.">
             <button onclick="SetUserName()">Set Username</button>
         </div>
-        <button id="ReadyButton" onclick="ChangeReadyStatus()" hidden="true">Click if ready</button>
+        <button id="ReadyButton" onclick="CheckForStartGame()" hidden="true">Click to ready up</button>
        <!-- <div id="SearchDropdown">
             <button id="DropdownButton" onclick="ClearSearch()">Clear Search</button>
             <div id="SearchMenu" class="SearchContents">
@@ -140,8 +140,36 @@
                 ShowOtherPlayerInfo();
             });
 
+            async function StartFullGame() {
+                await fetch("/startFullGame", {
+                    method: "post"
+                });
+            }
 
-            
+            async function StartCustomGame() {
+                let customCardAmount = document.getElementById("CustomCardRange").value;
+                await fetch("/startCustomGame", {
+                    method: "post",
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({cardAmount:customCardAmount})
+
+                });
+            }
+
+            async function StartGameFromLevel(level)
+            {
+                await fetch("/startGameFromLevel", {
+                    method: "post",
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({cardAmount:level})
+
+                });
+            }
+
             async function TestReplace()
             {
                 const fileURL = "/MainPageHTMLText.txt";
@@ -352,7 +380,18 @@
             async function ChangeReadyStatus()
             {
                 await socket.emit("ChangeReadyStatus");
-                
+                await socket.emit("GetSocketData");
+            }
+
+            async function CheckForStartGame() {
+                ChangeReadyStatus();
+                if(socketData.isReady)
+                {
+                    document.getElementById("ReadyButton").innerText = "Click to ready up";
+                }else
+                {
+                    document.getElementById("ReadyButton").innerText = "You're ready!";
+                }
                 await fetch("/CheckForChangeToGame",{ 
                     method: "post"
                    }
